@@ -11,7 +11,6 @@ MEDIUM
 - make linear scale wider, use larger fonts for ticks?
 - need new icon for 'Custom' screen
 - flesh out SubSupText (scenery-phet#29)
-- rewrite PHUtils.toTimesTenString
 
 LOW
 - values in graph indicators don't gray out when disabled because scenery.HTMLText doesn't support opacity
@@ -26,6 +25,7 @@ MIGRATE TO COMMON
 - DropperNode, Dropper
 - BeakerNode
 - ZoomButton to scenery-phet
+- toTimesTenString to phet-core
 
 =========================================================================================================
 
